updates done by...

--- a/wp-content/themes/coinmetro/libs/css/stylescbf4.css
+++ b/wp-content/themes/coinmetro/libs/css/stylescbf4.css
@@ -5251,12 +5251,12 @@ position:absolute;display:none;z-index:10000;width:50px;height:25px;}
 
 .ga-event .ga-event-text-anim strong {
 	font-weight:600;
-	color: #ae9bd1;
+	color: #F1720B;
 }
 
 .ga-event strong{
 		font-weight:400;
-	color: #ae9bd1;
+	color: #F1720B;
 }
 
 .typed-cursor{
