--- a/wp-content/themes/coinmetro/libs/css/stylescbf4.css
+++ b/wp-content/themes/coinmetro/libs/css/stylescbf4.css
@@ -5287,8 +5287,8 @@ position:absolute;display:none;z-index:10000;width:50px;height:25px;}
 .ga-blue-button {
 	display:inline-block;
 	text-align:center;
-	background: #3BC7D7;
-	border: 1px solid #3BC7D7;
+	background: #F1720B;
+	border: 1px solid #F1720B;
 	border-radius: 100px;
 	color:#fff;
 	padding-left: 20px;
@@ -5327,9 +5327,9 @@ position:absolute;display:none;z-index:10000;width:50px;height:25px;}
 	display:inline-block;
 	text-align:center;
 	background: #fff;
-	border: 1px solid #9f8bc9;
+	border: 1px solid #F1720B;
 	border-radius: 100px;
-	color:#9f8bc9;
+	color: #F1720B;
 	padding-left: 20px;
 	padding-right: 20px;
 	font-weight: 500;
@@ -5348,13 +5348,13 @@ position:absolute;display:none;z-index:10000;width:50px;height:25px;}
 
 
 .ga-wviolet-button:hover {
-	background:#9f8bc9;
+	background:#ffac00;
 	color:#fff !important;
 }
 
 .ga-wviolet-button:link, .ga-wviolet-button:visited {
 	text-decoration:none;
-	color:#9f8bc9;
+	color:#F1720B;
 	font-weight: 500;
 }
 
