--- a/wp-content/themes/coinmetro/libs/css/stylescbf4.css
+++ b/wp-content/themes/coinmetro/libs/css/stylescbf4.css
@@ -3914,7 +3914,7 @@ left: 0px;
 /* INNOVATORS */
 
 .ga-innovators {
-	background: #3FC6D6;
+	background: #F1720B;
 }
 
 .ga-innovators h2 {
@@ -3926,8 +3926,9 @@ left: 0px;
 	margin-bottom: 0;
 }
 
+
 .ga-innovators p {
-	opacity: 0.6;
+	
 	font-size: 14px;
 	color: #FFFFFF;
 	letter-spacing: 0;
