contact us final1

--- a/wp-content/themes/coinmetro/libs/css/stylescbf4.css
+++ b/wp-content/themes/coinmetro/libs/css/stylescbf4.css
@@ -4392,7 +4392,7 @@ input#btn-send-msg:hover {
 .footer li {
 	font-weight: 500;
 	font-size: 12px;
-	color: #3BC7D7;
+	color: #F1720B;
 	letter-spacing: 0;
 	line-height: 28px;
 }
