--- a/wp-content/themes/coinmetro/libs/css/stylescbf4.css
+++ b/wp-content/themes/coinmetro/libs/css/stylescbf4.css
@@ -2732,7 +2732,7 @@ transform: rotateY( 180deg );
 
 #ga-landing-menu .ga-landing-container{
 
-	background: rgba(241,114,11,0.95);
+	background: rgba(241,96,118,0.95);
 	color: #fff;
 	width: 100%;
 	height: 100%;
@@ -2862,7 +2862,7 @@ left: 0px;
 
 .ga-landing-top-menu li a:link, .ga-landing-top-menu li a:visited, .ga-landing-top-menu li a:active{
 	display: block;
-	color: #F1720B;
+	color: #f56076;
 	font-size: 15px;
 	font-weight: 400;
 	line-height: 40px;
@@ -2986,7 +2986,7 @@ left: 0px;
 
 
 .navbar .collapse a.navbar-text:hover {
-	background:#F1720B;
+	background:#f56076;
 	color: #fff;
 }
 
@@ -3055,7 +3055,7 @@ left: 0px;
 /* FOREX */
 
 .ga-forex {
-	background-color: #F1720B;
+	background-color: #f56076;
 	position: relative;
 }
 
@@ -3102,7 +3102,7 @@ left: 0px;
 .ga-forex .row a:hover,
 .ga-exchange a:hover {
 	background-color: #FFFFFF;
-	color: #F1720B;
+	color: #f56076;
 	background-image: url(../img/play-blue.png);
 }
 
@@ -3153,7 +3153,7 @@ left: 0px;
 }
 
 .video-area .video-play-btn a:hover {
-    background-color: #f1720b;
+    background-color: #f56076;
     color: #fff;
 }
 
@@ -3533,7 +3533,7 @@ left: 0px;
 
 /* OVERLOAD */
 .ga-overload {
-	background: #F1720B;
+	background: #f56076;
 	position: relative;
 }
 
@@ -3914,7 +3914,7 @@ left: 0px;
 /* INNOVATORS */
 
 .ga-innovators {
-	background: #F1720B;
+	background: #f56076;
 }
 
 .ga-innovators h2 {
@@ -4020,7 +4020,7 @@ left: 0px;
 }
 
 .ga-contact .form-area{
-	background: #F1720B;
+	background: #f56076;
 	border-radius: 6px;
 	padding: 30px 60px 50px 60px;
 }
@@ -4143,7 +4143,7 @@ input#btn-send-msg {
 	background: #FFFFFF;
 	border-radius: 100px;
 	font-size: 14px;
-	color: #F1720B;
+	color: #f56076;
 	letter-spacing: 0.33px;
 	background-image:url('../img/Shape.png');
 	background-repeat: no-repeat;
@@ -4392,7 +4392,7 @@ input#btn-send-msg:hover {
 .footer li {
 	font-weight: 500;
 	font-size: 12px;
-	color: #F1720B;
+	color: #f56076;
 	letter-spacing: 0;
 	line-height: 28px;
 }
@@ -4833,7 +4833,7 @@ line-height:60px;
 
 #ga-advisor-team h3{
 
-	color:#F1720B;
+	color:#;
 }
 
 #ga-advisor-team .ga-team-member-description {
@@ -4935,7 +4935,7 @@ line-height:60px;
 }
 
 .ga-team-block:hover{
-	background:#f1720b;
+	background:#f56076f1720b;
 	color:#fff !important;
 }
 
@@ -5001,7 +5001,7 @@ line-height:60px;
 @media screen and (max-width: 767px){
 	.ga-team-right{z-index:2;display:block;position:absolute;top:186px;right:20px;}
 	.ga-team-left{z-index:2;display:block;position:absolute;top:186px;left:20px;}
-	.ga-team-mask{margin:0 auto;width:260px;height:390px;overflow:hidden;background:#f1720b;}
+	.ga-team-mask{margin:0 auto;width:260px;height:390px;overflow:hidden;background:#f56076;}
 	.ga-team h3, .ga-team h2{font-size:21px;line-height:30px;}
 	.ga-team-member-description{display:block;}
 	.ga-team span{color:#fff;opacity:0.5;}
@@ -5278,12 +5278,12 @@ position:absolute;display:none;z-index:10000;width:50px;height:25px;}
 
 .ga-event .ga-event-text-anim strong {
 	font-weight:600;
-	color: #F1720B;
+	color: #ff8e69;
 }
 
 .ga-event strong{
 		font-weight:400;
-	color: #F1720B;
+	color: #ff8e69;
 }
 
 .typed-cursor{
@@ -5314,7 +5314,7 @@ position:absolute;display:none;z-index:10000;width:50px;height:25px;}
 .ga-blue-button {
 	display:inline-block;
 	text-align:center;
-	background: #F1720B;
+	background: #f56076;
 	border: 1px solid #ff8e69;
 	border-radius: 100px;
 	color:#fff;
@@ -5355,7 +5355,7 @@ position:absolute;display:none;z-index:10000;width:50px;height:25px;}
 	display:inline-block;
 	text-align:center;
 	background: #fff;
-	border: 1px solid #F1720B;
+	border: 1px solid #f56076;
 	border-radius: 100px;
 	color:#9f8bc9;
 	padding-left: 20px;
@@ -5382,7 +5382,7 @@ position:absolute;display:none;z-index:10000;width:50px;height:25px;}
 
 .ga-wviolet-button:link, .ga-wviolet-button:visited {
 	text-decoration:none;
-	color:#F1720B;
+	color:#f56076;
 	font-weight: 500;
 }
 
@@ -7349,7 +7349,7 @@ z-index: 3;
 }
 
 .ga-pd-colendar {
-	background: #F1720B;
+	background: #f56076;
 	width: 100%;
 	line-height: 50px;
 	border: 3px solid rgb(204, 95, 12);
@@ -9882,7 +9882,7 @@ animation-fill-mode: forwards;
 	background: -moz-linear-gradient(top, rgba(255,172,0,1) 0%, rgba(174,155,209,1) 50%, rgba(159,139,201,1) 51%, rgba(159,139,201,1) 100%);
 	background: -webkit-linear-gradient(top, rgba(255,172,0,1) 0%,rgba(174,155,209,1) 50%,rgba(159,139,201,1) 51%,rgba(159,139,201,1) 100%);
 	background: linear-gradient(to bottom, rgba(255,172,0,1) 0%,rgba(255,172,0,1) 50%,rgba(241,114,11,1) 51%,rgba(241,114,11,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffac00', endColorstr='#F1720B',GradientType=0 );
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffac00', endColorstr='#f56076',GradientType=0 );
 }
 
 .ga-xcm-available .ga-xcm-left strong{
@@ -9975,7 +9975,7 @@ font-size: 20px;
 	color: #fff;
 	text-align: center;
 	z-index: 103;
-	background-color: #F1720B;
+	background-color: #f56076;
 	font-weight: bold;
 }
 
@@ -10030,6 +10030,19 @@ z-index:10;
 	width:100%;
 	height:auto;
 }
+
+.center {
+	width: 100%;
+    height: auto;
+}
+
+.phrase {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+}
+
 .plane-text {
 	display:flex;
 	align-items: center!important;
@@ -10040,7 +10053,7 @@ z-index:10;
 	top:15px;
 	text-align:center;
 	text-transform:uppercase;
-	color:#F1720B;
+	color:#f56076;
 	font-size:12px;
 	font-weight:500;
 }
@@ -10053,7 +10066,7 @@ z-index:10;
 	line-height:14px;
 }
 .plane-text strong {
-	color:#F1720B;
+	color:#f56076;
 	font-size:12px;
 	font-weight:500;
 }
