--- a/wp-content/themes/coinmetro/libs/css/stylescbf4.css
+++ b/wp-content/themes/coinmetro/libs/css/stylescbf4.css
@@ -10032,7 +10032,10 @@ z-index:10;
 }
 
 .center {
-	width: 100%;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+	width: 70%;
     height: auto;
 }
 
